# pymongo-the-sql

./: README.md  README.rst  pyproject.toml  setup.cfg
tests/: run_tests.py  test.sqlite3
