[metadata]
name = pymongo-the-sql-marbad1994
version = 0.0.1
author = Marcus Bader
author_email = marcus@appsight.se
description = A sql wrapper made to mimic the pymongo syntax in order to simplify sql syntax.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marbad1994/pymongo-the-sql
project_urls =
    Bug Tracker = https://github.com/marbad1994/pymongo-the-sql/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = pymongo-the-sql
